fixed video list on mobile

--- a/assets/scss/components/videos/videos.scss
+++ b/assets/scss/components/videos/videos.scss
@@ -3,6 +3,10 @@
   grid-template-rows: 1fr;
   grid-template-columns: repeat(3, 1fr);
   column-gap: 16px;
+
+  @media screen and (max-width: 768px) {
+    grid-template-columns: 1fr;
+  }
 }
 
 .video-list--full {
